# claude-taskcluster-process

./: .gitignore  .pre-commit-config.yaml  CLAUDE.local.md.template  CLAUDE.md  README.md  hooks-config.json  install.py  permissions-config.json  pyproject.toml  sandbox-config.json
hooks/: block_ci_admin_prod.py  block_gh_api_write.py  block_no_verify.py  block_tc_token_inline.py  check_force_push.py  check_push_target.py  clippy_on_rust_edit.py  require_local_config.py  require_signin_scope.py
install/: __init__.py  constants.py  local_config.py  plan.py  preflight.py  settings.py  skills.py  symlinks.py  tools.py  utils.py
rules/: coding-preferences.md  planning-discipline.md  taskcluster-workflow.md  workspace-management.md
scripts/: taskcluster_local_test.py  taskcluster_monitor_group.py  taskcluster_submit_task.py
skills/review-taskgraph/: SKILL.md
skills/review-taskgraph/references/: checklist.md  reusable-transforms.md
skills/review-taskgraph/scripts/: get_diff.py
skills/taskcluster-local-test/: SKILL.md
skills/taskcluster-monitor-group/: SKILL.md
skills/taskcluster-submit-task/: SKILL.md
tests/: conftest.py  helpers.py  test_block_no_verify.py  test_check_force_push.py  test_check_push_target.py  test_install.py  test_require_local_config.py  test_require_signin_scope.py
tests/hooks/: test_block_ci_admin_prod.py  test_block_gh_api_write.py  test_block_tc_token_inline.py  test_check_force_push.py  test_check_push_target.py  test_clippy_on_rust_edit.py  test_require_local_config.py
tests/install/: test_local_config.py  test_plan.py  test_preflight.py  test_settings.py  test_skills.py  test_symlinks.py  test_utils.py
tests/scripts/: test_taskcluster_local_test.py  test_taskcluster_monitor_group.py  test_taskcluster_submit_task.py
tests/skills/: test_get_diff.py
