[project]
name = "claude-taskcluster-process"
version = "0.1.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "pre-commit",
  "pytest",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",      # pydocstrings — we don't write docstrings
  "ANN",    # type annotations — not required here
  "COM",    # trailing commas — handled by ruff format
  "CPY",    # copyright headers
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ARG001", # unused args in mock side_effects and patch targets
  "S101",   # assert — standard in tests
  "S108",   # /tmp in tests is a mock value, not a real temp file
]
"skills/**" = [
  "T201",   # print — expected in CLI scripts
  "S603",   # subprocess call — required for CLI tool invocation
  "S607",   # partial executable path — system tools expected on PATH
]
